--- a/php/Dockerfile-yii
+++ b/php/Dockerfile-yii
@@ -2,6 +2,10 @@ ARG PHP_VERSION=7.1-fpm
 
 FROM php:${PHP_VERSION}
 
+ARG TZ=UTC
+ENV TZ ${TZ}
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+
 ENV COMPOSER_HOME /root/composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 ENV PATH $COMPOSER_HOME/vendor/bin:$PATH
@@ -30,8 +34,7 @@ RUN docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-di
     && docker-php-ext-install mysqli \
     && docker-php-ext-install intl
 
-RUN pear config-set http_proxy http://123.56.177.147:6000 \
-    && pecl install redis \
+RUN pecl install redis \
     && pecl install imagick \
     && docker-php-ext-enable redis imagick
 
