--- a/php/Dockerfile-yii
+++ b/php/Dockerfile-yii
@@ -36,6 +36,8 @@ RUN docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-di
 
 RUN pecl install redis \
     && pecl install imagick \
-    && docker-php-ext-enable redis imagick
+    && pecl install apcu \
+    && pecl install mongodb \
+    && docker-php-ext-enable redis imagick mongodb apcu
 
 RUN rm -r /var/lib/apt/lists/*
